--- a/index.html
+++ b/index.html
@@ -1,130 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <!-- external (gtag) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJDL65P9Y4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DJDL65P9Y4');
+    </script>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rom Library</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
+    <title>CC Ported</title>
+    <link rel="stylesheet" href="style.css" />
 
-        h1, h2 {
-            color: #444;
-        }
+    <meta name="description"
+        content="Many games ported to different domains to prevent organization unblocking tools from blocking them. Cookie clicker, drift hunters, tiny fishing, spelunky, minecraft, slope, champion island, and NES games all unblocked.">
 
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin: 5px 0;
-        }
-
-        a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .determiner > ul {
-            margin-left: 20px;
-        }
-    </style>
 </head>
 
 <body>
     <h1>Rom Library</h1>
     <input type="text" id="searchInput" placeholder="Search for ROMs...">
     <h2>GBA Roms</h2>
-    <ul id="romList">
+    <ul class="romList">
         <li class="determiner" data-determiner="pokemon">Pokemon
             <ul>
-                <li><a href="/roms/pokemon_emerald_version.gba">Emerald Version</a></li>
-                <li><a href="/roms/pokemon_fire_red_version.gba">Fire Red Version</a></li>
-                <li><a href="/roms/pokemon_leaf_green_version.gba">Leaf Green Version</a></li>
-                <li><a href="/roms/pokemon_ruby_version.gba">Ruby Version</a></li>
-                <li><a href="/roms/pokemon_sapphire_version.gba">Sapphire Version</a></li>
-                <li><a href="/roms/pokemon_ultra_violet.gba">Ultra Violet</a></li>
-                <li><a href="/roms/pokemon_black_special_palace_edition_1.gba">Black - Special Palace Edition 1 (Red Hack)</a></li>
+                <li><a href="/roms/gba/pokemon_emerald_version.gba">Emerald Version</a></li>
+                <li><a href="/roms/gba/pokemon_fire_red_version.gba">Fire Red Version</a></li>
+                <li><a href="/roms/gba/pokemon_leaf_green_version.gba">Leaf Green Version</a></li>
+                <li><a href="/roms/gba/pokemon_ruby_version.gba">Ruby Version</a></li>
+                <li><a href="/roms/gba/pokemon_sapphire_version.gba">Sapphire Version</a></li>
+                <li><a href="/roms/gba/pokemon_ultra_violet.gba">Ultra Violet</a></li>
+                <li><a href="/roms/gba/pokemon_black_special_palace_edition_1.gba">Black - Special Palace Edition 1 (Red
+                        Hack)</a></li>
             </ul>
         </li>
         <li class="determiner" data-determiner="dragonball">Dragonball
             <ul>
-                <li><a href="/roms/dragonball_advanced_adventure.gba">Advanced Adventure</a></li>
-                <li><a href="/roms/dragonball_z_supersonic_warriors.gba">Supersonic Warriors</a></li>
+                <li><a href="/roms/gba/dragonball_advanced_adventure.gba">Advanced Adventure</a></li>
+                <li><a href="/roms/gba/dragonball_z_supersonic_warriors.gba">Supersonic Warriors</a></li>
             </ul>
         </li>
         <li class="determiner" data-determiner="mario">Mario
             <ul>
-                <li><a href="/roms/mario_kart_super_circuit.gba">Mario Kart Super Circuit</a></li>
-                <li><a href="/roms/super_mario_bros.gba">Super Mario Bros</a></li>
-                <li><a href="/roms/super_mario_world.gba">Super Mario World</a></li>
+                <li><a href="/roms/gba/mario_kart_super_circuit.gba">Mario Kart Super Circuit</a></li>
+                <li><a href="/roms/gba/super_mario_bros.gba">Super Mario Bros</a></li>
+                <li><a href="/roms/gba/super_mario_world.gba">Super Mario World</a></li>
             </ul>
         </li>
-        <li><a href="/roms/grand_theft_auto_advance.gba">Grand Theft Auto Advance</a></li>
-        <li><a href="/roms/the_legend_of_zelda.gba">The Legend of Zelda</a></li>
-        <li><a href="/roms/naruto_ninja_council_2.gba">Naruto - Ninja Council 2</a></li>
-        <li><a href="/roms/need_for_speed_underground_2.gba">Need for Speed - Underground 2</a></li>
-        <li><a href="/roms/ultimate_spider_man.gba">Ultimate Spider-Man</a></li>
+        <li><a href="/roms/gba/grand_theft_auto_advance.gba">Grand Theft Auto Advance</a></li>
+        <li><a href="/roms/gba/the_legend_of_zelda.gba">The Legend of Zelda</a></li>
+        <li><a href="/roms/gba/naruto_ninja_council_2.gba">Naruto - Ninja Council 2</a></li>
+        <li><a href="/roms/gba/need_for_speed_underground_2.gba">Need for Speed - Underground 2</a></li>
+        <li><a href="/roms/gba/ultimate_spider_man.gba">Ultimate Spider-Man</a></li>
+
+
+    </ul>
+    <h2>NES Roms</h2>
+    <ul class="romList">
+        <li class="determiner" data-determiner="zelda">Zelda
+            <ul>
+                <li><a href="/roms/nes/legend_of_zelda.nes.zip">Legend Of Zelda</a></li>
+                <li><a href="/roms/nes/zelda_2.nes.zip">Adventures of Link</a></li>
+            </ul>
+        </li>
+        <li class="determiner" data-determiner="mario">Mario
+            <ul>
+                <li><a href="/roms/nes/super_mario_bros_3.nes.zip">Super Mario Bros 3</a></li>
+                <li><a href="/roms/nes/super_mario_bros.nes.zip">Super Mario Bros</a></li>
+            </ul>
+        </li>
+        <li><a href="/roms/nes/terminator_2_judgement_day.nes.zip">Terminator 2, Judgement Day</a></li>
+        <li><a href="/roms/nes/tetris_2.nes.zip">Tetris 2</a></li>
+        <li><a href="/roms/nes/mike_tyson_punch_out.nes.zip">Mike Tyson's Punch Out</a></li>
+        <li><a href="/roms/nes/rc_pro_am_2.nes.zip">RC Pro AM 2</a></li>
     </ul>
 
-    <script>
-        document.getElementById('searchInput').addEventListener('input', function () {
-            var filter = normalize(this.value);
-            var romList = document.getElementById('romList');
-            var items = romList.getElementsByTagName('li');
-            var validDeterminers = [];
-            Array.from(items).forEach(function (item) {
-                if (item.classList.contains('determiner')) return;
-                var parentli = item.closest(".determiner");
-                var fullText = (parentli) ? parentli.getAttribute("data-determiner") : "";
-                var secondText = item.textContent;
-                var text = fullText + secondText;
-                text = normalize(text);
-                if (text.indexOf(filter) > -1) {
-                    item.classList.remove('hidden');
-                    if (parentli) {
-                        parentli.classList.remove('hidden');
-                        validDeterminers.push(parentli);
-                    }
-                } else {
-                    item.classList.add('hidden');
-                    if (parentli && validDeterminers.indexOf(parentli) == -1) {
-                        parentli.classList.add('hidden');
-                    }
-                }
-            });
-        });
-
-        function normalize(string) {
-            string = string.toLowerCase();
-            string = string.replace(/[^a-z0-9]/g, "");
-            string = string.replace(/\s/g, "");
-            return string;
-        }
+    <script src = "script.js">
+        
     </script>
 </body>
 
