--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta http-equiv="Expires" content="0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CC Ported</title>
+    <title>ROM Library | CC Ported</title>
     <link rel="stylesheet" href="style.css" />
 
     <meta name="description"
@@ -29,7 +29,9 @@
 
 <body>
     <h1>Rom Library</h1>
+    <p><a href="https://ccported.github.io">&larr; Back to CCPorted</a></p>
     <input type="text" id="searchInput" placeholder="Search for ROMs...">
+    <div>
     <h2>GBA Roms</h2>
     <ul class="romList">
         <li class="determiner" data-determiner="pokemon">Pokemon
@@ -84,7 +86,7 @@
         <li><a href="/roms/nes/mike_tyson_punch_out.nes.zip">Mike Tyson's Punch Out</a></li>
         <li><a href="/roms/nes/rc_pro_am_2.nes.zip">RC Pro AM 2</a></li>
     </ul>
-
+    </div>
     <script src = "script.js">
         
     </script>
