--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <li><a href="roms/nes/tetris_2.nes.zip">Tetris 2</a></li>
         <li><a href="roms/nes/mike_tyson_punch_out.nes.zip">Mike Tyson's Punch Out</a></li>
         <li><a href="roms/nes/rc_pro_am_2.nes.zip">RC Pro AM 2</a></li>
+        <li><a href="roms/nes/galaga.nes">Galaga</a></li>
     </ul>
     </div>
     <script src = "script.js">
